Add html structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <h1>Rock-Paper-Scissors</h1>
-    <section>
+    <section class="options">
       <div class="option">
         <h2>🪨</h2>
         <p>Rock</p>
@@ -29,8 +29,11 @@
         <p>Scissors</p>
       </div>
     </section>
+    <h3 class="result"></h3>
+    <section class="score">
 
-
+    </section>
+    <button></button>
   </main>
 
 </body>
