Change display to flex

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <p>Scissors</p>
       </div>
     </section>
-    <h3 class="result"></h3>
     <section class="score">
-
+      <h3 class="result"></h3>
     </section>
-    <button></button>
+    <button>Reset</button>
   </main>
 
 </body>
