Change the font

--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Noto+Color+Emoji&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <main>
-    <h1>Rock-Paper-Scissors</h1>
+    <h1 class="title">Rock-Paper-Scissors</h1>
     <section class="options">
       <div class="option">
-        <h2>🪨</h2>
+        <h2 class="emoji">🪨</h2>
         <p>Rock</p>
       </div>
       <div class="option">
-        <h2>📄</h2>
+        <h2 class="emoji">📄</h2>
         <p>Paper</p>
       </div>
       <div class="option">
-        <h2>✂️</h2>
+        <h2 class="emoji">✂️</h2>
         <p>Scissors</p>
       </div>
     </section>
     <section class="score">
-      <h3 class="result"></h3>
+      <h3 class="result">you Win!</h3>
     </section>
     <button>Reset</button>
   </main>
