Add anchor tag to select an option

--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Noto+Color+Emoji&display=swap"
-    rel="stylesheet">
+  rel="stylesheet">
 </head>
 
 <body>
   <main>
     <h1 class="title">Rock-Paper-Scissors</h1>
     <section class="options">
-      <div class="option">
+
+      <a href="#"><div class="option">
         <h2 class="emoji">🪨</h2>
         <p>Rock</p>
-      </div>
-      <div class="option">
+      </div></a>
+      <a href="#"><div class="option">
         <h2 class="emoji">📄</h2>
         <p>Paper</p>
       </div>
-      <div class="option">
+      </a>
+      <a href="#"><div class="option">
         <h2 class="emoji">✂️</h2>
         <p>Scissors</p>
-      </div>
+      </div></a>
     </section>
     <section class="score">
       <h3 class="result">you Win!</h3>
