Add pseudoclases to anchor tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Noto+Color+Emoji&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
 </head>
 
 <body>
@@ -21,22 +21,26 @@
     <h1 class="title">Rock-Paper-Scissors</h1>
     <section class="options">
 
-      <a href="#"><div class="option">
+      <a class="link" href="#">
         <h2 class="emoji">🪨</h2>
-        <p>Rock</p>
-      </div></a>
-      <a href="#"><div class="option">
-        <h2 class="emoji">📄</h2>
-        <p>Paper</p>
-      </div>
       </a>
-      <a href="#"><div class="option">
+      <a class="link" href="#">
+        <h2 class="emoji">📄</h2>
+      </a>
+      <a class="link" href="#">
         <h2 class="emoji">✂️</h2>
-        <p>Scissors</p>
-      </div></a>
+      </a>
     </section>
     <section class="score">
+      <h2>SCORE</h2>
       <h3 class="result">you Win!</h3>
+      <div class="user">
+
+      </div>
+      <div class="computer">
+        
+      </div>
+      
     </section>
     <button>Reset</button>
   </main>
