--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <main>
+    <!-- Lol I shouldn't have wasted so much time doing this xdd -->
     <h1 class="title">Rock-Paper-Scissors</h1>
     <section class="options">
 
@@ -31,7 +32,7 @@
         <h2 class="emoji">✂️</h2>
       </a>
     </section>
-  
+
     <section class="score">
       <h2>SCORE</h2>
       <table>
@@ -43,15 +44,18 @@
         </thead>
         <tbody>
           <tr>
-            <td class="left" id="userSel">NullU</td>
-            <td id="ComputerSel">Null</td>
+            <td class="left" id="userSel"></td>
+            <td id="computerSel"></td>
           </tr>
+          <tr>
+            <td class="left" id="userScore">0</td>
+            <td id="computerScore">0</td>
           </tr>
         </tbody>
       </table>
-      <h2 id="result">WIN/DRAW/LOSE</h2>
+      <h2 id="result"></h2>
     </section>
-    <button>Reset</button>
+    <button onclick="location.reload()">Reset</button>
   </main>
 
 </body>
