Delete inline js code
Add defer to script tag in html file
Change bad practices in js code

--- a/index.html
+++ b/index.html
@@ -6,57 +6,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock-paper-scissors</title>
   <link rel="stylesheet" href="./styles.css">
-  <script src="./app.js"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Noto+Color+Emoji&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+  <script defer src="./app.js"></script>
 </head>
 
 <body>
-  <main>
-    <!-- Lol I shouldn't have wasted so much time doing this xdd -->
-    <h1 class="title">Rock-Paper-Scissors</h1>
-    <section class="options">
+ 
 
-      <a onclick="chooseRock()" class="link" href="#">
-        <h2 class="emoji">🪨</h2>
-      </a>
-      <a onclick="choosePaper()" class="link" href="#">
-        <h2 class="emoji">📄</h2>
-      </a>
-      <a onclick="chooseScissors()" class="link" href="#">
-        <h2 class="emoji">✂️</h2>
-      </a>
-    </section>
 
-    <section class="score">
-      <h2>SCORE</h2>
-      <table>
-        <thead>
-          <tr>
-            <th class="left">You</th>
-            <th>Computer</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="left" id="userSel"></td>
-            <td id="computerSel"></td>
-          </tr>
-          <tr>
-            <td class="left" id="userScore">0</td>
-            <td id="computerScore">0</td>
-          </tr>
-        </tbody>
-      </table>
-      <h2 id="result"></h2>
-    </section>
-    <button onclick="location.reload()">Reset</button>
-  </main>
+  <h1 class="title">Rock-Paper-Scissors</h1>
+  <section class="options">
+
+    <a id="rock" class="link" href="#">
+      <h2 class="emoji">🪨</h2>
+    </a>
+    <a id="paper" class="link" href="#">
+      <h2 class="emoji">📄</h2>
+    </a>
+    <a id="scissors" class="link" href="#">
+      <h2 class="emoji">✂️</h2>
+    </a>
+  </section>
+
+  <section class="score">
+    <h2>SCORE</h2>
+    <table>
+      <thead>
+        <tr>
+          <th class="left">You</th>
+          <th>Computer</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="left" id="userSel"></td>
+          <td id="computerSel"></td>
+        </tr>
+        <tr>
+          <td class="left" id="userScore">0</td>
+          <td id="computerScore">0</td>
+        </tr>
+      </tbody>
+    </table>
+    <h2 id="result"></h2>
+  </section>
+  <!-- <button onclick="location.reload()">Reset</button> -->
+  <button>Reset</button>
+
+
 
 </body>
 
