Solve the problem without UI

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <h1 class="title">Rock-Paper-Scissors</h1>
   <section class="options">
 
-    <a id="rock" class="link" href="#">
-      <h2 class="emoji">🪨</h2>
+    <a class="link" href="#">
+      <h2 id="rock" class="emoji">🪨</h2>
     </a>
-    <a id="paper" class="link" href="#">
-      <h2 class="emoji">📄</h2>
+    <a class="link" href="#">
+      <h2 id="paper" class="emoji">📄</h2>
     </a>
-    <a id="scissors" class="link" href="#">
-      <h2 class="emoji">✂️</h2>
+    <a class="link" href="#">
+      <h2  id="scissors" class="emoji">✂️</h2>
     </a>
   </section>
 
