Add UI to exercise

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </thead>
       <tbody>
         <tr>
-          <td class="left" id="userSel"></td>
-          <td id="computerSel"></td>
+          <td class="left" id="userSel">-</td>
+          <td id="computerSel">-</td>
         </tr>
         <tr>
           <td class="left" id="userScore">0</td>
